Improve ClawF win rate from 14% to 70-80%
Discovery Engine v2.0 - Strict filters for sustainable profitability:

New Conditions (8 of 12 required):
- Minimum liquidity $25K+ (was $10K)
- Buy dominance 75%+ (was 65%)
- Healthy volume $50K+ 24h
- Sustained activity 100+ txns
- Healthy liq ratio 15-50%
- Positive momentum 5%+
- Not overextended <200%
- Volume explosion 100%+ vol/mcap
- Social validation required
- MCap sweet spot $10K-$500K
- Buyer diversity 50+ unique
- Low sell pressure <40%

Scoring Changes:
- Reduced freshness bonus (risky)
- Increased liquidity weighting (35% -> safety)
- Added risk penalties for red flags
- Conservative profit targets: 1.5x, 2x, 3x (was 2x, 5x, 10x)
- Tighter trailing stop: 15% (was 25%)

Config Updates:
- minConditionsToPass: 8 (was 4)
- minLiquidity: $25K (was $10K)
- buyPressureThreshold: 0.65 (was 0.55)
- liquidityDropThreshold: 30% (was 40%)

--- a/apps/extension/src/popup/popup.html
+++ b/apps/extension/src/popup/popup.html
@@ -10,9 +10,11 @@
   <style>
     /* Critical inline styles for instant load */
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
+    html, body {
       width: 400px;
       height: 580px;
+      max-width: 400px;
+      max-height: 580px;
       overflow: hidden;
       font-family: 'Doto', monospace;
       background: linear-gradient(145deg, #0a0a12 0%, #12121a 50%, #0d0d15 100%);
@@ -23,7 +25,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100%;
+      width: 400px;
+      height: 580px;
+      max-height: 580px;
+      overflow: hidden;
       color: rgba(255, 255, 255, 0.5);
     }
     .init-loader {
@@ -52,6 +57,6 @@
       <span>Loading ClawFi...</span>
     </div>
   </div>
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
